[build-system]
requires = ["setuptools>=69", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-agent-07y0bean"
version = "0.1.0"
description = "MVP Weather Agent using Tempo MPP and Telegram"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
